<resources>
    <string name="app_name">SignIn</string>
    <string name="start_txt">Lets start</string>
    <string name="wel_txt">Login</string>
    <string name="login_txt">LOGIN</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="remember_txt">Remember me</string>
    <string name="forgot_txt">I Forgot my Password</string>
    <string name="Login_txt">LOGIN</string>
    <string name="already_txt">Already have an Account?</string>
    <string name="go_map_txt_splash">GO MAP </string>
    <string name="new_txt"> Do not have an account?</string>
    <string name="click_here">Create</string>
    <string name="sign_up">Create Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="em_ail">Email</string>
    <string name="re_type_password_txt">Re-Type-Password</string>
    <string name="another_login_txt">Or Login with</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name_home">24 / 7 HEALTHCARE</string>
    <string name="topDocsText">Top Doctors</string>
    <string name="_24_7_healthcare">24 / 7 Healthcare</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="fees">Fees</string>
    <string name="select_date">Select Date</string>
    <string name="_27_10_2023">27/10/2023</string>
    <string name="select_time">Select Time</string>
    <string name="_10_00">10:00</string>
    <string name="register">Register</string>
    <string name="back">BACK</string>
    <string name="book_appointment1">BOOK APPOINTMENT</string>
    <string name="add_to_cart">GO TO CART</string>
    <string name="lab_test_and_package">Lab Test and Package</string>
    <string name="addToCart">ADD TO CART</string>
    <string name="deliver_location_karachi">Deliver Location: Karachi</string>
    <string name="total_cost">Total Cost</string>
    <string name="checkout">CHECKOUT</string>
    <string name="string_deliver_location">Deliver Location: Karachi</string>
    <string name="buy_medicines">BUY MEDICINES</string>
    <string name="todo">TODO</string>
    <string name="lab_test">LAB TEST</string>
    <string name="medicins">MEDICINS</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_articles">HEALTH ARTICLES</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="log_out">LOG OUT</string>
    <string name="lab_test_and_packages">Lab Test and Packages</string>
    <string name="pleas_fill_all_details_for_booking">Pleas fill all details for Booking</string>
    <string name="pin_code">Pin Code</string>
    <string name="hi_nhello">Hi\nHello</string>
    <string name="family_physicians">Family Physicians</string>
    <string name="dietician">DIETICIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologist">Cardiologist</string>

</resources>