<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_traffic"
    tools:context=".LoginActivity"

    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:alpha="0.15"
    >

</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_view"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:id="@+id/loc"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="1dp"
            android:src="@drawable/baseline_play_arrow_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loc"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/start_txt"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        tools:ignore="VisualLintBounds">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wel_txt"
                android:textColor="@color/my_primary"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textSize="32sp"
                android:textStyle="bold"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_txt"
                android:alpha="0.7"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconCheckable="true"
                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_name"
                android:drawableEnd="@drawable/done_icon"
                android:drawableRight="@drawable/done_icon"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_txt"
                android:alpha="0.7"
                android:textStyle="bold"
                />
            <!--This is used for password with visibility on and off-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                app:passwordToggleEnabled="true"
                >
                <EditText
                    android:id="@+id/password_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/icon_visibility_off"
                    android:drawableRight="@drawable/icon_visibility_off"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>


            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_txt"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_txt"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/Login_txt"
                tools:ignore="VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/already_text"
                    android:text="@string/new_txt"
                    />
            <Button
                android:id="@+id/myButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/click_here"
                android:textColor="#FFFFFF"
            />
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/another_login_txt"
                android:textColor="#757575"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/fb_icon"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/github_icon"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/twitter_icon_png"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>